Fixed page rendering on mobile finally

--- a/public/res/style.css
+++ b/public/res/style.css
@@ -12,8 +12,8 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    height: var(--app-height, 100vh);
+    min-height: 100dvh;
+    height: var(--app-height, 100dvh);
     overflow: hidden;
     overscroll-behavior: none;
     background: linear-gradient(#00000055);
